--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
+    <section class="conteudo-principal"></section>
+    <h2 class="titulo-principal">meuobjetivodoano</h2>
+    </body>
 </html>
