--- a/index.html
+++ b/index.html
@@ -12,4 +12,8 @@
     </body>
 </html>
  <section class="botaão">Cursos do Alura</button>
-    <button class="botão"
+    <button class="botão">Criar Projetos em JavaScrip</button>
+    <button class="botão">Criar um Portifolio</button>
+    <button class="botão">Atualzar meu Curriculo</button>
+ </div>
+ <body>
