--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
-    <section class="conteudo-principal"></section>
-    <h2 class="titulo-principal">meuobjetivodoano</h2>
-    </body>
-</html>
- <section class="botaão">Cursos do Alura</button>
+    <section class="conteudo-principal">
+    <h2 class="titulo-principal"> Meusobjetivosdoano<span>_</span></h2>
+    <div class= conteudo>
+    <div class="botõoes">
+    <button class="botaão ativo">Cursos do Alura</button>
     <button class="botão">Criar Projetos em JavaScrip</button>
     <button class="botão">Criar um Portifolio</button>
     <button class="botão">Atualzar meu Curriculo</button>
